# AI-TRADER

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  Dockerfile  LICENSE  README.md  RUNBOOK.md  bot.ipynb  docker-compose.yml  pyproject.toml  requirements.txt
.claude/: settings.local.json
.github/workflows/: ci.yml  nightly.yml  release.yml  security.yml
config/: default.yaml  live.yaml  paper.yaml  research.yaml
data/: README.md
docs/: prometheus.yml
docs/adr/: 0001-solana-py-dependency.md  README.md
docs/drills/: paper-to-live.md
notebooks/: research.ipynb
plans/: v2_upgrade.md  v3_self_improvement.md  v4_institutional.md  v5_alpha_engine.md  v6_research_engine.md  v7_live_mvp.md  v8_solana_mvp.md  v9_production_live.md
scripts/: dev.sh  run.sh
solana-mvp/: .env.example  .gitignore  README.md  conftest.py  pyproject.toml  requirements.txt
solana-mvp/connectors/: helius.py  quicknode.py  solana_rpc.py
solana-mvp/core/: config.py  confirm.py  errors.py  execution.py  execution_jupiter.py  execution_raydium.py  risk_exec.py  route_selector.py  state.py  submit.py  tx_builder.py  types.py
solana-mvp/data/state/: mode.json  risk_exec_state.json
solana-mvp/runtime/: feedback.py  logger.py  loop.py  mode_manager.py  wallet_tracker_live.py
solana-mvp/signal/: cluster_detector.py  signal_engine.py  tx_decoder.py
solana-mvp/tests/: test_mode_manager.py  test_risk.py  test_wallet_tracking.py
src/: bot.py  config.py  constants.py  executor.py  ingest.py  logger.py  position_manager.py  risk_manager.py  rug_filter.py  signal_engine.py  token_scanner.py  wallet_tracker.py
src/research/: __init__.py  clock.py  collect.py  evaluation.py  integrate.py  patterns.py  replay.py  run.py  selector.py  simulated_executor.py  simulated_rpc_client.py  storage.py
src/research/collectors/: helius_collector.py  pool_collector.py  price_collector.py
src/solalpha/: __init__.py  __main__.py
src/solalpha/data/: __init__.py  backfill_poller.py  caches.py  decoder.py  decoder_worker.py  dedupe.py  program_ids.py  rpc_pool.py  smart_wallet_subscriptions.py  websocket_ingestor.py
src/solalpha/domain/: __init__.py  events.py  modes.py  orders.py  positions.py  signals.py
src/solalpha/execution/: __init__.py  alt_manager.py  base.py  confirmation.py  jupiter.py  live_executor.py  paper_executor.py  pipeline.py  raydium.py  retry_bump.py  route_selector.py  stuck_resolver.py  tx_builder.py
src/solalpha/foundation/: __init__.py  bus.py  cli.py  clock.py  config.py  errors.py  health.py  ids.py  logging.py  metrics.py  persistence_schema.py  retry.py  secrets.py  state.py
src/solalpha/observability/: __init__.py  exporter.py  portfolio.py  recovery.py  snapshot.py  trade_log.py
src/solalpha/research/: __init__.py  backfill.py  metrics.py  pattern_miner.py  readonly_guard.py  replay.py  sim_executor.py  strategy_selector.py
src/solalpha/runtime/: __init__.py  app.py  workers.py
src/solalpha/signal/: __init__.py  combiner.py  kill_switch.py  mode_manager.py  pipeline.py  risk_engine.py  sizer.py  smart_wallet_scorer.py
src/solalpha/signal/detectors/: __init__.py  base.py  cluster.py  flow_anomaly.py  prepump.py
tests/: conftest.py  smoke_dry_run.py  test_evaluation.py  test_integrate_safety.py  test_patterns.py  test_position_manager.py  test_replay_determinism.py  test_research_clock.py  test_risk_manager.py  test_selector.py  test_signal_engine.py  test_simulated_executor.py
tests/integration/: test_cli.py  test_paper_executor.py  test_pipeline.py  test_snapshot_recovery.py  test_state.py
tests/live/: test_live_smoke.py
tests/replay/: test_determinism.py
tests/unit/: test_combiner.py  test_config.py  test_confirmer.py  test_decoder.py  test_dedupe.py  test_detectors.py  test_ids.py  test_jupiter.py  test_kill_switch.py  test_mode_manager.py  test_raydium.py  test_refactor_helpers.py  test_research_extras.py  test_research_metrics.py  test_retry.py  test_retry_bump.py  test_risk_engine.py  test_route_selector.py  test_rpc_pool.py  test_secrets.py  test_sizer.py  test_stuck_resolver.py  test_tx_builder.py
