[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "solalpha"
version = "0.1.0"
description = "Production-grade Solana alpha trading system with hard risk controls, deterministic replay, and paper-mode default."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11,<3.14"
authors = [{ name = "solalpha contributors" }]
keywords = ["solana", "trading", "alpha", "jupiter", "raydium", "memecoin"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Topic :: Office/Business :: Financial",
]

dependencies = [
  "pydantic>=2.6,<3",
  "pydantic-settings>=2.2,<3",
  "httpx>=0.27,<1",
  "websockets>=12,<14",
  "solders>=0.26,<0.28",
  "solana>=0.36,<0.37",
  "tenacity>=8.2,<10",
  "aiosqlite>=0.20,<0.22",
  "pyarrow>=23.0.1,<24",   # >=23.0.1 fixes PYSEC-2026-113
  "structlog>=24.1,<25",
  "prometheus-client>=0.20,<1",
  "click>=8.1,<9",
  "anyio>=4.3,<5",
  "aiohttp>=3.9,<4",
  "PyYAML>=6.0,<7",
  "numpy>=1.26,<3",
  "scikit-learn>=1.4,<2",
  "base58>=2.1,<3",
  "python-dateutil>=2.9,<3",
  # Windows has no system IANA tzdata, so Python's `zoneinfo` (and pyarrow's
  # timestamp deserializer, which goes through it) fails with
  # `ZoneInfoNotFoundError` on a plain Windows install. Linux/macOS read
  # `/usr/share/zoneinfo` and don't need the package.
  "tzdata>=2024.1; sys_platform == 'win32'",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.3,<10",  # >=9.0.3 fixes CVE-2025-71176 (tmpdir race)
  "pytest-asyncio>=0.23,<1",
  "pytest-cov>=5.0,<7",
  "respx>=0.21,<1",
  "ruff>=0.4,<1",
  "mypy>=1.10,<2",
  "pip-audit>=2.7,<3",
  "bandit>=1.7,<2",
  "pre-commit>=3.7,<5",
  "build>=1.2,<2",
  "types-PyYAML>=6.0,<7",
  "types-python-dateutil>=2.9,<3",
]

[project.scripts]
solalpha = "solalpha.foundation.cli:main"

[project.urls]
Homepage = "https://github.com/solalpha/solalpha"
Issues = "https://github.com/solalpha/solalpha/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/solalpha"]

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/tests",
  "/config",
  "/scripts",
  "/README.md",
  "/RUNBOOK.md",
  "/CHANGELOG.md",
  "/LICENSE",
  "/pyproject.toml",
  "/.env.example",
]

# ---- ruff ----
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]
extend-exclude = ["data", "logs", "notebooks"]

[tool.ruff.lint]
select = [
  "E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "TCH",
  "PTH", "RUF", "ASYNC", "S", "PIE", "RET", "T20", "ARG",
]
ignore = [
  "S101",  # assert allowed in tests
  "S603",  # subprocess without shell ok
  "S311",  # PRNG ok in tests
  "B008",  # function defaults like Depends are common
  "RUF012", # mutable class defaults flagged but harmless for pydantic
  "N818",  # exception taxonomy uses deliberate domain nouns
           # (StuckTransaction, BlockhashExpired, RiskBlocked, ...)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "ARG", "T20"]
"scripts/**" = ["T20", "S"]

[tool.ruff.lint.isort]
known-first-party = ["solalpha"]

[tool.ruff.lint.flake8-type-checking]
# pydantic resolves model annotations at runtime, so imports used only in
# annotations on these base classes must stay out of `TYPE_CHECKING` blocks.
runtime-evaluated-base-classes = [
  "pydantic.BaseModel",
  "pydantic_settings.BaseSettings",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---- mypy ----
[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
warn_unused_configs = true
disallow_untyped_decorators = false
plugins = ["pydantic.mypy"]
mypy_path = "src"
files = ["src/solalpha"]

[[tool.mypy.overrides]]
module = [
  "solana.*",
  "solders.*",
  "pyarrow.*",
  "sklearn.*",
  "base58",
]
ignore_missing_imports = true

# ---- pytest ----
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = [
  "-ra",
  "--strict-markers",
  "--strict-config",
  "--tb=short",
]
markers = [
  "unit: pure logic tests, no I/O",
  "integration: I/O against fakes/recorded fixtures, no network",
  "replay: deterministic replay engine tests",
  "live: hits real devnet/mainnet — skipped unless --run-live and SOLALPHA_TEST_LIVE=1",
]
filterwarnings = [
  "error",
  "ignore::DeprecationWarning:websockets.*",
  "ignore::DeprecationWarning:pkg_resources.*",
  "ignore::pytest.PytestUnraisableExceptionWarning",
]

[tool.coverage.run]
source = ["src/solalpha"]
branch = true
omit = ["src/solalpha/__main__.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false
precision = 1
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
  "\\.\\.\\.",
]
