[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "solana-mvp"
version = "0.9.0"
description = "Production Solana DEX live trading system (v9 spec)"
requires-python = ">=3.11"
dependencies = [
    "httpx==0.27.2",
    "websockets==12.0",
    "solders==0.21.0",
    "solana==0.34.3",
    "base58==2.1.1",
    "python-dotenv==1.0.1",
    "pyarrow==17.0.0",
]

[project.optional-dependencies]
test = ["pytest==8.3.3", "pytest-asyncio==0.24.0"]

[tool.setuptools.packages.find]
include = ["core*", "signal*", "connectors*", "runtime*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q --tb=short"
filterwarnings = ["ignore::DeprecationWarning"]
